# OHCS

./: .gitignore  CMakeLists.txt  Makefile  README.md
compile/: cleanBigint.sh  compileBigint.sh
include/: OCSS.h  OCSS.hpp  argv.h  bigunsigned.h  main.h  main.hpp
main/: OCSS.cpp  argv.c  argv.cpp  bigunsigned.c  main.c  main.cpp
